# Helm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  helm.py  helm_context.py  helm_workspace.py  install.sh  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
commands/: __init__.py  checkpoint.py  context.py  db.py  doctor.py  harness.py  health.py  memory.py  ops.py  profile.py  skill.py  status.py  validate.py
docs/: adaptive-harness.md  demos.md  execution-profiles.md  first-run.md  handoff-0.6.0.md  helm-dogfooding-reference.md  knowledge-contract.md  memory-operations-policy.md  onboarding.md  opensource-module-split.md  opensource-product-definition.md  ops-memory-query.md  profile-templates.md  public-launch-checklist.md  release-checklist.md  router-context-hydration.md  skill-quality-and-policy.md  skill-self-improvement.md  task-finalization.md  task-name-conventions.md  three-minute-demo.md
docs/comparisons/: agent-frameworks.md  eval-tools.md  observability-tools.md
docs/integrations/: claude-code.md  codex.md  existing-agent-workspace.md  existing-project.md  openclaw.md  openhands.md
docs/releases/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.5.1.md  0.5.10.md  0.5.11.md  (+17 more)
references/: adaptive_harness_policy.json  execution_profiles.json  guard_policy.json  model_provider_policy.json  model_recovery_policy.json  skill-capture-template.md  skill-contract-template.json  skill_contracts.json  skill_profile_policies.json
scripts/: adaptive_harness.py  adaptive_harness_lib.py  command_guard.py  command_log_report.py  conversational_memory_capture.py  discovery.py  file_intake_lib.py  intelligence_tier.py  memory_capture.py  memory_ops.py  model_health_lib.py  model_health_probe.py  model_provider_probe.py  ops_daily_report.py  ops_db.py  ops_memory_query.py  release_smoke.sh  reply_gate.py  retrieval_policy.py  retrieval_policy_lib.py  route_contract_lib.py  run_with_profile.py  skill_capture.py  skill_manifest_lib.py  state_io.py  state_snapshot.py  task_capture_core.py  task_ledger_report.py  workspace_checkpoint.py
tests/: test_adaptive_harness_lib.py  test_cli_validation.py  test_command_guard.py  test_discovery.py  test_intelligence_tier.py  test_memory_capture.py  test_memory_ops.py  test_model_health_lib.py  test_model_provider_probe.py  test_ops_db.py  test_ops_memory_query.py  test_reply_gate.py  test_report_resilience.py  test_retrieval_policy.py  test_route_contract_lib.py  test_run_with_profile_guard.py  test_skill_manifest_lib.py  test_state_io.py  test_state_snapshot.py  test_workspace_checkpoint.py  test_workspace_detection.py
(+22 files in other folders)
