[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-agent-ops"
version = "0.6.6"
description = "Stability-first operations CLI for long-lived agent workspaces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "JDeun" }]

[project.scripts]
helm = "helm:main"

[tool.setuptools]
py-modules = ["helm", "helm_workspace", "helm_context"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["scripts", "commands", "references"]

[tool.setuptools.package-data]
references = ["*.json", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
